k8s/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quiz-app
  labels:
    name: quiz-app
    environment: local
